--- a/employee-management-frontend/.gitignore
+++ b/employee-management-frontend/.gitignore
@@ -11,6 +11,18 @@
 # production
 /build
 
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### VS Code ###
+.vscode
+
 # misc
 .DS_Store
 .env.local
