--- a/employee-management-frontend/.gitignore
+++ b/employee-management-frontend/.gitignore
@@ -11,16 +11,7 @@
 # production
 /build
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### VS Code ###
+# vs-code
 .vscode
 
 # misc
