added variable config support

--- a/employee-management-backend/src/main/resources/application.properties
+++ b/employee-management-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_database?useSSL=false
-spring.datasource.username=test
-spring.datasource.password=test#123
+spring.datasource.url=jdbc:${MYSQL_DB_TYPE}://${MYSQL_DB_HOST}:${MYSQL_DB_PORT}/${MYSQL_DB_NAME}?useSSL=false
+spring.datasource.username=${MYSQL_DB_USERNAME}
+spring.datasource.password=${MYSQL_DB_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
